--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
-  "baseFontSize": 10,
-  "theme": "obsidian",
+  "baseFontSize": 14,
+  "theme": "moonstone",
   "translucency": false,
   "cssTheme": "Sanctum"
 }
